--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Set up JDK 23
         uses: actions/setup-java@v4.7.0
         with:
+          distribution: temurin
           java-version: 23
       - uses: actions/checkout@v4.2.2
       - name: Test with Maven
